lists out of the screen are now positioned correctly.

--- a/examples/trello/ext/Main.css
+++ b/examples/trello/ext/Main.css
@@ -128,7 +128,16 @@ ol, ul {
 }
 
 #board {
-  height: 100vh;
+  /* TODO(matija): hardcoded, make it nicer.
+   * navbar height: 40px
+   * header height: 57.09px
+   * margin-bottom: 8px;
+   */
+  height: calc(100vh - 40px - 57.09px - 8px);
+  white-space: nowrap;
+  overflow-x: auto;
+  overflow-y: hidden;
+  margin-bottom: 8px;
 }
 
 /* List */
